<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 ETH Zurich.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Paolo Carta - Implementation
      Theus Hossmann - Implementation
      Dominik Schatzmann - Message specification
-->
<resources>

    <string name="app_name">App Name</string>
    <string name="app_label">App Label</string>
    <string name="search_hint">Search users by email</string>
    <string name="permDescription">This permission will grant access to content providers. Data might be manipulated by malicious applications</string>
    <string name="client_version">1</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices..</string>
    <string name="select_device">select a device to be added</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="conditions">.</string>
    <string name="button_post">Post</string>
    <string name="button_cancel">Cancel</string>
    <string name="desc_confirm_logout">Are you sure you want to logout?</string>
    <string name="label_signin">Log In</string>
    <string name="button_signin">Log In</string>
    <string name="button_create_account">Create new account</string>
    <string name="label_create_account">Create new account</string>
    <string name="label_id">ID</string>
    <string name="label_password">PWD</string>
    <string name="label_password_re">(re) PWD</string>
    <string name="label_name">Name</string>
    <string name="label_status">Status</string>
    <string name="label_profile_image">Profile Image</string>
    <string name="button_create_account_confirm">Create</string>
    <string name="button_followers">Followers</string>
    <string name="button_followings">Followings</string>
    <string name="button_edit_profile">Edit</string>
    <string name="button_follow">Follow</string>
    <string name="button_unfollow">Unfollow</string>
    <string name="label_loading">Loading..</string>
    <string name="label_num_of_comments">Comment(s): </string>
    <string name="option_my_profile">My Profile</string>
    <string name="option_signout">Log Out</string>
    <string name="label_edit_profile">Edit profile</string>
    <string name="button_apply">Apply</string>
    <string name="title_in_progress">In progress</string>
    <string name="info_verifying_your_account">Verifying your account.</string>
    <string name="info_creating_new_account">Creating a new account.</string>
    <string name="error_internet_not_connected">Not connected to the Internet!</string>
    <string name="info_fill_all">Fill the all required fields</string>
    <string name="info_invalid_email">Given ID is not a valid email address.</string>
    <string name="info_password_not_matched">Given two passwords are not same.</string>
    <string name="info_login_or_signup">Please sign in or create new account.</string>
    <string name="info_will_start_following">You will start following this user once Internet connectivity is available.</string>
    <string name="info_will_stop_following">You will stop following this user once Internet connectivity is available.</string>
    <string name="label_users">Users</string>
    <string name="label_followings">Followings</string>
    <string name="label_followers">Followers</string>
    <string name="info_no_users">No users</string>
    <string name="info_tweet_posted">Message posted</string>
    <string name="label_search_result_for">Search Results for: </string>
    <string name="option_home">Home</string>
    <string name="label_user">User</string>
    
    <string name="error_posting">Something went wrong with posting (maybe no Internet connection?). We will re-try soon.</string>
    <string name="error_login">There was a problem with the login. Please try again later.</string>
    <string name="error_signup">There was a problem with the login. Please try again later.</string>
    <string name="error_timeout_comments">Timeout while loading comments.</string>
    <string name="error_timeout_messages">Timeout while loading messages.</string>
    <string name="error_timeout_followings">Timeout while loading followings.</string>
    <string name="error_timeout_followers">Timeout while loading friends.</string>
    <string name="error_posting2">Something went wrong while posting your message.</string>
    <string name="error_commenting">Something went wrong while posting your comment.</string>
    <string name="error_unknown">Unknown server error.</string>
    
    <string name="VKErrorDetailUserNotFound">The user with the given user identifier is not found.</string>
    <string name="VKErrorDetailInvalidUserIdentifierFormat">Invalid user identifier format. The user identifier should be a string containing numeric values only.</string>
    <string name="VKErrorDetailFriendIsRequester">The user identifier of the requested friend is same to the one of the requester.</string>
    <string name="VKErrorDetailEmailNotFound">The email is not registered yet.</string>
    <string name="VKErrorDetailInvalidPassword">The password is incorrect.</string>
    <string name="VKErrorDetailEmptyEmailOnUserProfile">A mandatory field, email is empty.</string>
    <string name="VKErrorDetailEmptyPasswordOnUserProfile">A mandatory field, password is empty.</string>
    <string name="VKErrorDetailEmptyUserIdentifierOnUserProfile">A mandatory field, user identifier is empty.</string>
    <string name="VKErrorDetailEmailAlreadyExists">The email is already registered.</string>
    <string name="VKErrorDetailUnableToUpdateOtherUserProfile">A user can not update other user\'s profile.</string>
    <string name="VKErrorDetailUnableToChangeEmail">Unable to change the email field.</string>
    <string name="VKErrorDetailInvalidContextIdentifier">Invalid context identifier value. The context identifier format should be greater than zero.</string>
    <string name="VKErrorDetailContextNotFound">The context with the given context identifier is not found.</string>
    <string name="VKErrorDetailExceedMaxUsers">The number of users for a domain exceeded the limit(%1$s). Resolution is to register a tenant in the Ruby front end by clicking on (%2$s)</string>
    <string name="VKErrorDetailTooLowClientVersion">The version of the client(%1$s) is too low. The user needs to upgrade the client by clicking on (%2$s).</string>

</resources>