<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showConditionsRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/showConditionsLogo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/about_background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textConditionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left"
            android:text="@string/label_edit_profile"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|right"
                android:text="@string/label_name"
                android:textColor="@color/red"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/signUpName"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:gravity="top"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|right"
                android:text="@string/label_status"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/signUpStatus"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:gravity="top"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|right"
                android:text="@string/label_profile_image"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <ImageButton
                android:id="@+id/buttonProfileImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="right"
                android:background="@color/grey"
                android:gravity="top"
                android:scaleType="fitXY"
                android:src="@drawable/default_profile" />

        </LinearLayout>
        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonUpdateProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/button_apply" />
    </LinearLayout>

</ScrollView>