<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showUsersRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_bar_background"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/headerBarFollowersButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="15dp"
            android:background="@drawable/header_button"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/label_followers"
            android:visibility="visible" />

        <Button
            android:id="@+id/headerBarFriendsButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="15dp"
            android:background="@drawable/header_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/label_followings" />

        <Button
            android:id="@+id/headerBarDisasterPeersButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/header_button"
            android:focusable="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Peers"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/userList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fastScrollEnabled="true"
        android:scrollingCache="true" />

    <TextView
        android:id="@+id/userListEmpty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/info_no_users"
        android:textSize="16sp" />

</LinearLayout>