<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2011 ETH Zurich. All rights reserved. This program and 
	the accompanying materials are made available under the terms of the GNU 
	Public License v2.0 which accompanies this distribution, and is available 
	at http://www.gnu.org/licenses/old-licenses/gpl-2.0.html Contributors: Paolo 
	Carta - Implementation Theus Hossmann - Implementation Dominik Schatzmann 
	- Message specification
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/about_background"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left"
            android:text="@string/label_signin"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/signInId"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:gravity="top"
                    android:inputType="text|textEmailAddress" />

                <EditText
                    android:id="@+id/signInPwd"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:gravity="top"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:padding="10dp"
                android:text="@string/button_signin" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/button_create_account" />
    </LinearLayout>

</ScrollView>