<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2011 ETH Zurich. All rights reserved. This program and 
	the accompanying materials are made available under the terms of the GNU 
	Public License v2.0 which accompanies this distribution, and is available 
	at http://www.gnu.org/licenses/old-licenses/gpl-2.0.html Contributors: Paolo 
	Carta - Implementation Theus Hossmann - Implementation Dominik Schatzmann 
	- Message specification -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="wrap_content"
	android:id="@+id/showUserRoot">

	<LinearLayout android:id="@+id/showTweetLayout"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:paddingTop="10dp">


		<LinearLayout android:id="@+id/showUserInfo"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:background="@drawable/content_box" android:paddingLeft="10dp"
			android:paddingTop="20dp" android:paddingBottom="20dp"
			android:paddingRight="10dp" android:orientation="horizontal">

			<ImageView
			    android:id="@+id/showUserProfileImage"
			    android:layout_width="45dp"
			    android:layout_height="45dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/image_border"
			    android:src="@drawable/default_profile"
			    android:visibility="visible" />

			<LinearLayout android:id="@+id/linearLayout1"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingLeft="20dp">
				<TextView android:id="@+id/showUserRealName"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="TextView" android:textColor="@color/twimightTextDark"
					android:textSize="18sp" android:textStyle="bold" />
				<TextView android:id="@+id/showUserScreenName"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="TextView" android:textColor="@color/twimightTextDark"
					android:textSize="18sp" />

				<TextView
				    android:id="@+id/showUserLocation"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="Location"
				    android:textColor="@color/twimightTextLight"
				    android:textSize="18sp"
				    android:visibility="gone" />

			</LinearLayout>
		</LinearLayout>

		<LinearLayout android:id="@+id/showLocalUserButtons"
			android:orientation="horizontal" android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="gone" android:background="@drawable/content_box_bottom"
			android:padding="10dp">
			<Button android:id="@+id/showUserFollowers"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/button_followers" android:layout_marginRight="20dp"
				android:visibility="visible" android:paddingLeft="10dp" android:paddingRight="10dp" />
			<Button android:id="@+id/showUserFriends"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/button_followings" android:layout_marginRight="20dp"
				android:paddingLeft="10dp" android:paddingRight="10dp"
				android:visibility="visible" />
			<Button android:id="@+id/editProfile"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/button_edit_profile"
				android:paddingLeft="10dp" android:paddingRight="10dp"
				android:visibility="visible" />
			<Button android:id="@+id/showUserDisasterPeers"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="Peers"
				android:paddingLeft="10dp" android:paddingRight="10dp"
				android:visibility="gone" />
		</LinearLayout>
		<LinearLayout android:id="@+id/showUserButtons"
			android:orientation="vertical" android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="visible" android:background="@drawable/content_box_bottom"
			android:padding="10dp">
			<LinearLayout android:id="@+id/showUserTounfollow"
				android:orientation="horizontal" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:padding="10dp"
				android:visibility="gone">
				<ImageView android:id="@+id/showUserInfo2"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:src="@android:drawable/ic_dialog_info"
					android:layout_marginRight="10dp" />
				<TextView android:id="@+id/showUserInfoText2"
					android:layout_width="wrap_content" style="@style/twimightDefaultTextAppearance" android:layout_height="wrap_content"
					android:text="@string/info_will_stop_following" />
			</LinearLayout>
			<LinearLayout android:id="@+id/showUserTofollow"
				android:orientation="horizontal" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:padding="10dp"
				android:visibility="gone">
				<ImageView android:id="@+id/showUserInfo1"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:src="@android:drawable/ic_dialog_info"
					android:layout_marginRight="10dp" />
				<TextView android:id="@+id/showUserInfoText1"
					android:layout_width="wrap_content" style="@style/twimightDefaultTextAppearance" android:layout_height="wrap_content"
					android:text="@string/info_will_start_following" />
			</LinearLayout>
			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="match_parent" android:orientation="horizontal">
				<Button android:id="@+id/showUserFollow"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/button_follow" android:layout_marginRight="20dp" android:paddingLeft="15dp" android:paddingRight="15dp"/>

				<ImageButton
				    android:id="@+id/showUserMention"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginRight="20dp"
				    android:src="@drawable/btn_twimight_reply"
				    android:visibility="gone" />

				<ImageButton
				    android:id="@+id/showUserMessage"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginRight="20dp"
				    android:focusable="false"
				    android:src="@drawable/btn_twimight_dm"
				    android:visibility="gone" />

			</LinearLayout>
		</LinearLayout>

		<LinearLayout android:id="@+id/showUserAdditionalInfo"
			android:paddingTop="10dp" android:orientation="vertical"
			android:layout_width="match_parent" android:layout_height="wrap_content">

			<TextView
			    android:id="@+id/showUserDescription"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="10dp"
			    android:autoLink="web"
			    android:padding="10dp"
			    android:text="Description.."
			    android:textColor="@color/twimightTextDark"
			    android:textSize="18sp"
			    android:visibility="visible" />

			<TextView
			    android:id="@+id/showUserStats"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dp"
			    android:text="User stats"
			    android:textColor="@color/twimightTextDark"
			    android:visibility="gone" />

		</LinearLayout>

		<LinearLayout
		    android:id="@+id/showUserTweetsButtons"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/content_box"
		    android:orientation="horizontal"
		    android:padding="10dp"
		    android:visibility="gone" >

			<Button
			    android:id="@+id/showUserTweetsButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:focusable="false"
			    android:paddingLeft="15dp"
			    android:paddingRight="15dp"
			    android:text="Tweets"
			    android:visibility="invisible" />

		</LinearLayout>


	</LinearLayout>
</ScrollView>